# ChangeLog for sys-apps/irqbalance
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/irqbalance/ChangeLog,v 1.29 2011/11/04 08:43:45 jlec Exp $

*irqbalance-1.0.1 (04 Nov 2011)

  04 Nov 2011; Justin Lecher <jlec@gentoo.org> -irqbalance-1.0.ebuild,
  +irqbalance-1.0.1.ebuild, -files/irqbalance-1.0-build.patch, metadata.xml:
  Version Bump with permission of robbat2, fixes Segf on non-NUMA systems

*irqbalance-1.0 (03 Nov 2011)

  03 Nov 2011; Mike Frysinger <vapier@gentoo.org> +irqbalance-1.0.ebuild,
  +files/irqbalance-1.0-build.patch, metadata.xml:
  Version bump #389429 by poncho.

  21 Jan 2011; Mike Frysinger <vapier@gentoo.org> irqbalance-0.56.ebuild:
  Depend on glib by SLOT rather than version #352209 by Jan Psota.

*irqbalance-0.56 (03 Dec 2010)

  03 Dec 2010; Mike Frysinger <vapier@gentoo.org> +irqbalance-0.56.ebuild,
  +files/irqbalance-0.56-build.patch:
  Version bump #347670 by Justin Lecher.

  20 Sep 2008; Brent Baude <ranger@gentoo.org> irqbalance-0.55-r2.ebuild:
  stable ppc, bug 238076

  20 Sep 2008; Markus Meier <maekke@gentoo.org> irqbalance-0.55-r2.ebuild:
  amd64/x86 stable, bug #238076

*irqbalance-0.55-r2 (15 Apr 2008)

  15 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/irqbalance.init-0.55-r2, +irqbalance-0.55-r2.ebuild:
  fix bug #212226, patch from Rene Neumann <gentoo@necoro.eu>

  14 Jan 2008; Tony Vroon <chainsaw@gentoo.org> irqbalance-0.55.ebuild,
  irqbalance-0.55-r1.ebuild:
  Add pkgconfig dependency for the Evil Compile Person
  <bugs@dev.gentooexperimental.org>, closes bug #204717.

*irqbalance-0.55-r1 (25 Aug 2007)

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org> +files/irqbalance.1,
  +irqbalance-0.55-r1.ebuild:
  Grab manpage from upstream #169680 by Bryan Veal.

  06 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  irqbalance-0.55.ebuild:
  ppc stable, bug #160983

  06 Feb 2007; Simon Stelling <blubb@gentoo.org> irqbalance-0.55.ebuild: