@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/irqbalance
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/irqbalance/ChangeLog,v 1.29 2011/11/04 08:43:45 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/irqbalance/ChangeLog,v 1.30 2011/11/05 17:59:25 vapier Exp $
+
+*irqbalance-1.0.2 (05 Nov 2011)
+
+  05 Nov 2011; Mike Frysinger <vapier@gentoo.org> +files/irqbalance.confd-1,
+  +irqbalance-1.0.2.ebuild, files/irqbalance.init:
+  Version bump, and improve init.d #383955 by Pacho Ramos.
 
 *irqbalance-1.0.1 (04 Nov 2011)
 
